@@ -33,7 +33,6 @@
 #include <unistd.h>
 #include <errno.h>
 #include <sys/mman.h>
-#include <pthread.h>
 
 #include <eyedblib/iassert.h>
 #include <eyedblib/machtypes.h>
