@@ -1,3 +1,8 @@
+2006-03-17 Francois Dechelle <francois@dechelle.net>
+
+	* Changed configure to use javac instead of jikes on Mac OS X
+	* Changed UT_SEM to HAVE_SEMAPHORE_POLICY_SYSV_IPC, a config #define that is guessed by configure.in
+
 2006-03-16 Francois Dechelle <francois@dechelle.net>
 
 	* Changed configure.in to find automatically the integer type that has the same size as a void *; fixed files using pointer_int, that is now pointer_int_t.
